# esp-utils

./: .clangd  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml
include/: convert.h  fnv.h  growable_buffer.h  mini_profiler.h  mutex.h  onboard_led.h  reset_button.h  run_once.h  rundown_protection.h  simple_function_ref.h  task.h  time.h  unordered_map.h
include/lightstd/: allocator.h  auto_ptr.h  functional.h  string.h  unordered_map.h  vector.h
include/storage/: istorage.h  nvs.h
src/: convert.cpp  fnv.cpp  growable_buffer.cpp  mutex.cpp  onboard_led.cpp  reset_button.cpp  run_once.cpp  rundown_protection.cpp  task.cpp  time.cpp
src/lightstd/: allocator.cpp
src/storage/: nvs.cpp
test/: CMakeLists.txt  RUNNING_TESTS.md  sdkconfig.defaults
test/main/: CMakeLists.txt  idf_component.yml  main.cpp  test_allocator.cpp  test_convert.cpp  test_fnv.cpp  test_growable_buffer.cpp  test_lightstd_functional.cpp  test_lightstd_string.cpp  test_lightstd_unordered_map.cpp  test_lightstd_vector.cpp  test_mutex.cpp  test_run_once.cpp  test_rundown_protection.cpp  test_storage_istorage.cpp  test_storage_nvs.cpp
test_app/: sdkconfig.defaults
test_app/main/: CMakeLists.txt  main.cpp  test_run_once.cpp
